# Zappy

./: .better-commits.json  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: linter.yml  mirror.yml  ruff.yml
ai/: AI_List.md  zappy_ai.py
ai/src/: algorithm.py  algorythme.py  client.py  command.py  connection_handler.py  connexion_handler.py  dataclasses_models.py  main.py  player.py
ai/src/algorithms/: Common.md  Constants.py  Ejector.py  Human.py  Layer.py  Queen.py  Randomizer.py  Surviver.py  Survivor.md  Survivor.py  Villager.py  Worker.py  common.py
ai/src/algorithms/modules/: auto_gather_module.py  backpack_module.py
ai/src/constants/: ai_list.py  constants.py  resources.py
doc/: protocole.md
exercises/02_functions/: functions1.rs
exercises/03_if/: if1.rs  if2.rs
exercises/04_primitive_types/: primitive_types2.rs  primitive_types4.rs  primitive_types5.rs
exercises/07_structs/: structs1.rs  structs2.rs
exercises/08_enums/: enums2.rs  enums3.rs
exercises/09_strings/: strings3.rs
gui/: CMakeLists.txt  tmp.md
gui/docs/: help.txt
gui/include/: Assets.hpp  GUI.hpp  GUIException.hpp  Maths.hpp  OpenGLUtils.hpp  UtilsVector.hpp
gui/include/elements/: Egg.hpp  Elevation.hpp  Elevations.hpp  Environement.hpp  Map.hpp  Player.hpp  PlayerAnimations.hpp  PlayerStatus.hpp  Players.hpp  Resource.hpp  Tile.hpp
gui/include/elements/overlay/: ChatBox.hpp  Elevation2D.hpp  End.hpp  EventBox.hpp  InfoBox.hpp  Init.hpp  Overlay.hpp  Player2D.hpp  ResourceInfo.hpp  Resources.hpp  Team.hpp  TextBox.hpp  Tile2D.hpp  TimeUnit.hpp
gui/include/graphics/: AShadered.hpp  ColorGenerator.hpp  Drawable.hpp  IDrawable.hpp  IDrawable2D.hpp  IDrawable3D.hpp  IEvent.hpp  IObject.hpp  IShadered.hpp  IUpdatable.hpp
gui/resources/grass/: grass0.glb  grass1.glb  grass2.glb  grass3.glb
gui/resources/map/: cell.glb
gui/resources/players/: player.glb
gui/resources/rocks/: food.glb  linemate.glb  mendiane.glb  thystame.glb
gui/resources/shaders/: sun.fs  sun.vs
gui/src/: Assets.cpp  Event.cpp  Event.hpp  GUI.cpp  Main.cpp  Window.cpp  Window.hpp
gui/src/elements/: Egg.cpp  Elevation.cpp  Elevations.cpp  Environement.cpp  Events.cpp  Map.cpp  Player.cpp  PlayerAnimations.cpp  PlayerStatus.cpp  Players.cpp  Resource.cpp  Tile.cpp
gui/src/elements/overlay/: ChatBox.cpp  Elevation2D.cpp  End.cpp  EventBox.cpp  InfoBox.cpp  Overlay.cpp  Player2D.cpp  ResourceInfo.cpp  Resources.cpp  Team.cpp  TextBox.cpp  Tile2D.cpp  TimeUnit.cpp
gui/src/graphics/: AShadered.cpp  Camera.cpp  Camera.hpp  ColorGenerator.cpp  Cube.cpp  Cube.hpp  GameObject.cpp  GameObject.hpp  GlGameObject.cpp  GlGameObject.hpp  IGameObject.cpp  IGameObject.hpp  SFMLGameObject.cpp  SFMLGameObject.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  SkyBox.cpp  SkyBox.hpp  TornadoParticle.cpp  TornadoParticle.hpp  Transformable2D.cpp  Transformable2D.hpp  Transformable3D.cpp  Transformable3D.hpp  UiObject.cpp  UiObject.hpp
gui/src/graphics/primitives/: Box2D.cpp  Box2D.hpp  Cube.cpp  Cube.hpp  Model.cpp  Model.hpp  Rectangle2D.cpp  Rectangle2D.hpp  Sphere.cpp  Sphere.hpp  Sprite2D.cpp  Sprite2D.hpp  Text2D.cpp  Text2D.hpp
gui/src/graphics/primitives/model/: Face.cpp  Face.hpp  Model.cpp  Model.hpp
gui/src/maths/: Color.cpp  Color.hpp  Matrix.hpp  Point.hpp  Quaternion.cpp  Quaternion.hpp  Utils.hpp  Vector.hpp
gui/tests/: tests_init.cpp
gui/tests/models/: tests_model.cpp
server/: CMakeLists.txt
server/docs/: help.txt
server/include/: AIClient.hpp  Client.hpp  Environement.hpp  GUIClient.hpp  Server.hpp  ServerException.hpp
server/include/master/: AddProcess.hpp  AiDescription.hpp  DescriptionBox.hpp  Init.hpp  Master.hpp  SelectAi.hpp  TeamBox.hpp  TeamsInfo.hpp  ToolBar.hpp
server/src/: AIClient.cpp  Environement.cpp  GUIClient.cpp  Main.cpp  Server.cpp
server/src/master/: AddProcess.cpp  AiDescription.cpp  DescriptionBox.cpp  Master.cpp  SelectAi.cpp  TeamBox.cpp  TeamsInfo.cpp  ToolBar.cpp
server/tests/: tests_args.cpp
shared/: CMakeLists.txt
shared/include/: AICommunication.hpp  ArgsParser.hpp  Command.hpp  Connect.hpp  GUICommunication.hpp  Help.hpp  Packet.hpp  Process.hpp  SharedException.hpp  Utils.hpp  Vector.hpp  help.hpp
shared/include/gui/: BroadcastEvent.hpp  EggEvent.hpp  EggLaidEvent.hpp  EndIncantationEvent.hpp  GUICommunication.hpp  GUIEvent.hpp  GUIEvents.hpp  IdEvent.hpp  MapSizeEvent.hpp  NbEvent.hpp  NewPlayerEvent.hpp  PlayerInventoryEvent.hpp  PlayerLevelEvent.hpp  PlayerPositionEvent.hpp  ResourceEvent.hpp  StartIncantationEvent.hpp  StrEvent.hpp  TeamNameEvent.hpp  TileInfoEvent.hpp
shared/include/sfml/: AButton.hpp  PressButton.hpp  SfmlUtils.hpp  StateButton.hpp
shared/include/zappy/: Info.hpp
shared/src/: ArgsParser.cpp  Connect.cpp  Help.cpp  Process.cpp  Utils.cpp
shared/src/gui/: BroadcastEvent.cpp  EggEvent.cpp  EggLaidEvent.cpp  EndIncantationEvent.cpp  GUIEvent.cpp  IdEvent.cpp  MapSizeEvent.cpp  NbEvent.cpp  NewPlayerEvent.cpp  PlayerInventoryEvent.cpp  PlayerLevelEvent.cpp  PlayerPositionEvent.cpp  ResourceEvent.cpp  StartIncantationEvent.cpp  StrEvent.cpp  TeamNameEvent.cpp  TileInfoEvent.cpp
shared/src/sfml/: AButton.cpp  PressButton.cpp  SfmlUtils.cpp
shared/src/zappy/: Info.cpp
